--- a/index.html
+++ b/index.html
@@ -13,19 +13,18 @@
 <body>
    <header>
 
-    <nav >
-       
-        <a class="Logo .link" href="index.html" >WEB<span class="logo2">Studio</span></a>
+    <nav>
+        <a class="lo_go  link" href="index.html" >WEB<span class="logo_2">Studio</span></a>
         <ul class="list">
-            <li><a class="link-heder .link" href="./index.html" >Studio</a></li>
-            <li><a class="link-heder .link" href="./portfolio.html">Portfolio</a></li>  
-            <li><a class="link-heder .link" href="#">Contacts</a></li>
+            <li><a class="link-heder link" href="./index.html" >Studio</a></li>
+            <li><a class="link-heder link" href="./portfolio.html">Portfolio</a></li>  
+            <li><a class="link-heder link" href="">Contacts</a></li>
         </ul> 
     </nav>
         <address class="adres">
-            <ul>
-            <li><a class="adres__meil .link" href="meilto:info@devstudio.com" >info@devstudio.com</a></li>
-            <li><a class="adres__tel .link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+            <ul class="list">
+            <li><a class="adres__meil link" href="meilto:info@devstudio.com" >info@devstudio.com</a></li>
+            <li><a class="adres__meil link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
         </ul>
         </address>
    </header>
@@ -79,7 +78,7 @@
 </section>
    </main>
    <footer  class="footer">
-<a class="Logo link" href="index.html">WEB<span class="footer-logo">Studio</span></a>
+<a class="lo_go link" href="index.html">WEB<span class="footer-logo">Studio</span></a>
 <p class="footer-text" >Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
    </footer>
 </body>
