--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav class="list">
-            <a href="index.html" class="Logo .link">WEB<span class="logo2">STUDIO</span></a>
+            <a href="index.html" class="lo_go .link">WEB<span class="logo_2">STUDIO</span></a>
             <ul class="list">
                 <li><a class="link-heder link"  href="./index.html">Studio</a></li>
                 <li><a  class="link-heder link" href="./portfolio.html">Portfolio</a></li>  
@@ -68,7 +68,7 @@
         </section>
     </main>
     <footer  class="footer">
-        <a class="Logo .link" href="index.html">WEB<span class="footer-logo">STUDIO</span></a>
+        <a class="lo_go .link" href="index.html">WEB<span class="footer-logo">STUDIO</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     
